# go-reqs2http

./: .golangci.toml  README.md  doc.sh  gen.sh  go.mod  go.sum  lint.sh  method.go  method_test.go  request.go  request_test.go  send.go  vuln.sh
app/sendmany/: sender.go  sender_test.go
buffered/: buffer.go  change.go  sender.go  usage.go  wait.go
buffered/waithint/: simple.go
examples/source/conv/wasm/runtime/rt-wazero/simple/gz-strings2strings/: main.go  rs_gstr2str.wasm  vet.sh
examples/source/conv/wasm/runtime/rt-wazero/simple/gz-strings2strings/wasm/rs-gstr2str/: Cargo.toml  rs_gstr2str.wasm  test.mjs
examples/source/conv/wasm/runtime/rt-wazero/simple/gz-strings2strings/wasm/rs-gstr2str/src/: lib.rs
pair/: err.go  pair.go
reqs2http-proto/reqs2http/v1/: header.proto  method.proto  request.proto
reqs2http/v1/: header.pb.go  method.pb.go  request.pb.go
source/: reqs.go  reqs_test.go
source/conv/ser/: bytes2msg.go  msg2reqs.go  msg2reqs_test.go
source/conv/wasm/: bytes.go
source/conv/wasm/runtime/rt-wazero/simple/: converter.go
source/conv/wasm/ser/: input2msg.go  input2msg_test.go  input2reqs.go  input2reqs_test.go
util/: compose.go
util/arr/: all.go  each.go  filter.go  fold.go  map.go  zip.go
util/ch/: each.go  each_test.go  fold.go  writer.go  writer_test.go
util/ch/map/: err.go  err_test.go  map.go
